--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,13 +1,14 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
+    "target": "ES2020",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "outDir": "dist/server",
-    "types": ["node"],
+    "esModuleInterop": true,
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
-    "noEmit": false
+    "strict": true,
+    "skipLibCheck": true,
+    "types": ["node"]
   },
   "include": ["server/**/*.ts", "shared/**/*.ts"]
 }
