feat: enhance build scripts and server configuration
- Added separate build scripts for client and server in package.json.
- Introduced a new deploy script to streamline production builds.
- Updated server index to serve static files from the root instead of a base path.
- Modified health check logic in ConnectionIndicator to handle server starting state.
- Improved responsiveness of tables across various components by adding muted scrollbar utility.
- Refactored table components to utilize a new reusable Table component.
- Enhanced CSS for better scrollbar visibility and table styling.
- Updated TypeScript configuration for output directory adjustments.
- Removed hardcoded base path in Vite configuration for better flexibility.
- Created a comprehensive run-all script for project setup and development.

--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:client": "vite build",
+    "build:server": "tsc -p tsconfig.server.json && npm run copy:sql",
+    "copy:sql": "cp -r server/sql dist/server/",
     "preview": "vite preview",
     "server": "tsx watch --tsconfig tsconfig.server.json server/index.ts",
     "predev:full": "node scripts/reset-dev.mjs",
     "dev:full": "concurrently \"npm:dev\" \"npm:server\"",
-    "build:server": "tsc -p tsconfig.server.json",
     "start": "node dist/server/index.js",
-    "start:server": "node dist/server/index.js",
-    "check:builds": "npm run build:server && npm run build"
+    "build:prod": "rm -rf dist && npm run build:server && npm run build:client",
+    "deploy": "npm run build:prod",
+    "prod": "npm run build:prod && npm start"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
