--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -3,7 +3,7 @@
     "target": "ES2020",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "outDir": "dist/server",
+    "outDir": "dist",
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "strict": true,
