feat: update .env.example with environment variable templates and add SECURITY.md for best practices

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,30 @@
-# Backend API
+# 🔧 Variables de Entorno - Finanzas App
+# Copia este archivo a .env y completa con tus valores reales
+
+# 🌐 Configuración del Servidor
 PORT=4000
 
-# Credenciales base de datos (HostGator / cPanel)
+# 🗄️ Base de Datos MySQL
 DB_HOST=localhost
 DB_PORT=3306
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
+DB_USER=tu_usuario_mysql
+DB_PASSWORD=tu_password_mysql
+DB_NAME=nombre_base_datos
 
-# Autenticación y bootstrap
-JWT_SECRET=CAMBIA_ESTA_SECRETA
-ADMIN_EMAIL=
-ADMIN_PASSWORD=
-# ADMIN_EMAIL y ADMIN_PASSWORD se usan una sola vez para crear el usuario "Dios" si la tabla está vacía.
+# 🔐 Seguridad y Autenticación
+JWT_SECRET=genera_un_secret_aleatorio_de_64_caracteres_minimo
+ADMIN_EMAIL=admin@tudominio.com
+ADMIN_PASSWORD=password_admin_seguro
+
+# ⏱️ Configuración de Timeouts (segundos)
+VITE_AUTH_TIMEOUT=30
+
+# 🚀 Producción
+NODE_ENV=development
+
+# 📝 Notas de Seguridad:
+# - Nunca subas el archivo .env al repositorio
+# - Usa contraseñas seguras en producción
+# - Genera JWT_SECRET con: openssl rand -hex 32
+# - Para producción, usa: npm run env:encrypt
+# - ADMIN_EMAIL y ADMIN_PASSWORD se usan una vez para crear el usuario "Dios"
