--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,19 @@ node_modules
 dist
 .vite
 .DS_Store
+
+# Variables de entorno sensibles
 .env
 .env.local
+.env.production
+.env.staging
+.env.development
+.env.test
+
+# Archivos permitidos de dotenv
+# .env.example (para documentación)
+# .env.vault (para secrets encriptados)
+
 .idea
 npm-debug.log*
 yarn-debug.log*
@@ -16,3 +27,4 @@ tmp/
 temp/
 pnpm-lock.yaml
 pnpm-debug.log*
+.env.keys
