--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "env:decrypt": "npx @dotenvx/dotenvx decrypt",
     "prod:secure": "npx @dotenvx/dotenvx run -- npm start",
     "security:check": "npm audit && npx @dotenvx/dotenvx run --quiet -- echo '✅ Variables de entorno cargadas de forma segura'",
-    "test:employees": "node test/employees.integration.test.ts"
+    "test:employees": "node test/employees.integration.test.ts",
+    "migrate:timesheets": "npx @dotenvx/dotenvx run -- node scripts/migrate-timesheets.mjs",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,md,json}\"",
+    "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,css,md,json}\"",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -34,14 +40,15 @@
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.3",
-    "lucide-react": "^0.544.0",
+    "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.545.0",
     "multer": "^2.0.2",
     "mysql2": "^3.15.1",
     "papaparse": "^5.5.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.3",
-    "zod": "^4.1.11"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.51.0",
@@ -51,12 +58,19 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
-    "@types/node": "^24.6.2",
+    "@types/node": "^24.7.0",
     "@types/papaparse": "^5.3.16",
-    "@types/react": "^19.2.0",
+    "@types/react": "^19.2.1",
     "@types/react-dom": "^19.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.0",
+    "@typescript-eslint/parser": "^8.46.0",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "concurrently": "^9.2.1",
+    "eslint": "^9.37.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^6.1.1",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4.1.14",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
