feat: Refactor useForm hook to improve type safety and validation handling
fix: Update format utility functions to enhance type handling and error management

refactor: Modify logger utility to use more specific argument types

refactor: Restructure main application rendering for better readability and error handling

feat: Enhance Counterparts page with improved type definitions and error handling

fix: Update DailyBalances page to utilize useRef for better performance

refactor: Adjust Data page to streamline imports and improve error logging

refactor: Clean up Employees page by optimizing useEffect and loadEmployees function

refactor: Optimize Home page by using useCallback for data loading functions

fix: Update Loans page to use new auth context structure

fix: Refactor Login page to align with new context structure

refactor: Clean up ParticipantInsights page by removing unused imports

refactor: Simplify Report page by removing unnecessary settings context usage

fix: Update Services page to use new auth context structure

fix: Refactor Settings page to align with new context structure

refactor: Optimize Stats page by removing unused imports

refactor: Clean up Supplies page by removing unnecessary auth context usage

fix: Update Timesheets page to improve data loading and error handling

refactor: Enhance TransactionsMovements page with better data handling

fix: Update Upload page to align with new auth context structure

feat: Implement uploads utility for handling branding logo uploads

feat: Create auth context for managing user authentication and roles

feat: Establish settings context for managing application settings

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 node_modules
 dist
+server/uploads
+dist/server/uploads
 .vite
 .DS_Store
 
@@ -33,3 +35,5 @@ mysql/josema22_bioalergia.sql
 mysql/josema22_wp560.create
 mysql/josema22_wp560.sql
 mysql/openfileslimit
+docs/lint-summary.md
+lint-report.json
