--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.4",
+    "sharp": "^0.34.4",
     "zod": "^4.1.12"
   },
   "devDependencies": {
