Refactor input change handlers to use typed events across multiple components
- Updated input change handlers in various components to use `ChangeEvent` type for better type safety and clarity.
- Added new entries to `.gitignore` for typecheck and lint summary reports.
- Improved state management in forms by consolidating change handlers for form fields.
- Ensured consistent handling of input values and types in forms related to employees, loans, services, and reports.

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ mysql/josema22_wp560.sql
 mysql/openfileslimit
 docs/lint-summary.md
 lint-report.json
+typecheck-report.txt
+docs/typecheck-summary.md
