--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ node_modules
 dist
 server/uploads
 dist/server/uploads
+storage/
 .vite
 .DS_Store
 
@@ -40,3 +41,6 @@ lint-report.json
 typecheck-report.txt
 docs/typecheck-summary.md
 mercadopago_movimientos_diarios.ipynb
+reports/movimientos_20251011.csv
+mysql/service_seed_2024_2026.sql
+scripts/generate-service-seed.ts
