feat(calendar,server,ui): add Prisma + migrate calendar queries; introduce i18n, react-query & zustand; refactor classification UI and tooling
- server/prisma: add prisma schema (google_calendar_events / sync log) and Prisma client (server/lib/prisma.ts)
- server/lib: migrate google-calendar-queries from raw mysql pool to prisma.$queryRaw with safe SQL builders; add parsers module to extract/normalize calendar metadata and dates; wire prisma client usage
- server/lib/google-calendar: use parseCalendarMetadata and simplify classification/extraction logic
- add .env.example DATABASE_URL entry and update .gitignore to include generated/prisma
- add Husky pre-commit hook (npx lint-staged) and README pre-commit docs
- frontend: add react-query QueryClient (src/lib/queryClient.ts) and initialize provider in main; add i18n initialization and locale files (es/en)
- frontend: refactor calendar feature:
  - useCalendarEvents -> integrate @tanstack/react-query, move filters to zustand store (src/store/calendarFilters.ts)
  - add zustand store and update package.json deps/devDeps accordingly
  - CalendarHeatmapPage & CalendarSchedulePage: use i18n translations
  - CalendarClassificationPage: rewrite to react-hook-form + zod resolver, add Radix tooltip/toast, improve UX and data handling
  - types: add classification form schema and helpers
- misc: reorder hooks exports, update eslint ignores to skip generated, update package.json and lockfile for new deps (prisma, @prisma/client, react-query, react-hook-form, i18next, radix, husky, lint-staged, zustand, etc.)

The commit centralizes DB access via Prisma, extracts parsing logic, wires client-side query/state/i18n tooling and improves classification UI and developer tooling (pre-commit).

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ DB_PORT=3306
 DB_USER=tu_usuario_mysql
 DB_PASSWORD=tu_password_mysql
 DB_NAME=nombre_base_datos
+DATABASE_URL="mysql://tu_usuario_mysql:tu_password_mysql@localhost:3306/nombre_base_datos"
 
 # 🔐 Seguridad y Autenticación
 JWT_SECRET=genera_un_secret_aleatorio_de_64_caracteres_minimo
