--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ mercadopago_movimientos_diarios.ipynb
 reports/movimientos_20251011.csv
 mysql/service_seed_2024_2026.sql
 scripts/generate-service-seed.ts
+/generated/prisma
