chore(server,build): copy generated Prisma client into dist during build:server (add copy:prisma script)

--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dev": "vite",
     "build": "npm run build:prod",
     "build:client": "vite build",
-    "build:server": "tsc -p tsconfig.server.json && npm run copy:sql",
+    "build:server": "tsc -p tsconfig.server.json && npm run copy:sql && npm run copy:prisma",
     "copy:sql": "cp -r server/sql dist/server/",
+    "copy:prisma": "mkdir -p dist/generated && cp -r generated/prisma dist/generated/",
     "preview": "vite preview",
     "server": "npx @dotenvx/dotenvx run -- tsx watch --tsconfig tsconfig.server.json server/index.ts",
     "predev:full": "node scripts/reset-dev.mjs",
