--- a/package.json
+++ b/package.json
@@ -43,14 +43,16 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.90.5",
-    "clsx": "^2.1.1",
     "bcryptjs": "^3.0.2",
+    "clsx": "^2.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "flowbite": "^3.1.2",
+    "flowbite-react": "^0.12.9",
     "googleapis": "^164.0.0",
     "html2canvas": "^1.4.1",
     "i18next": "^25.6.0",
