--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,33 @@ reports/movimientos_20251011.csv
 mysql/service_seed_2024_2026.sql
 scripts/generate-service-seed.ts
 /generated/prisma
+
+# Additional ignores (catch common build/artifact folders)
+node_modules/
+dist/
+build/
+coverage/
+.parcel-cache/
+.next/
+.nuxt/
+.turbo/
+.cache/
+.vite/
+/.turbo
+.DS_Store
+*.log
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+/.env
+/.env.*
+
+# VSCode
+.vscode/
+
+# OS
+.DS_Store
+
+# Generated prisma client (ensure untracked)
+generated/
