chore: run prisma generate during build and postinstall
- add prisma:generate script and invoke it in build:prod
- run prisma:generate on postinstall to ensure client is generated after install
- ensure @prisma/client is in dependencies and prisma in devDependencies

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "predev:full": "node scripts/reset-dev.mjs",
     "dev:full": "concurrently \"npm:dev\" \"npm:server\"",
     "start": "node dist/server/index.js",
-    "build:prod": "rm -rf dist && npm run build:server && npm run build:client",
+    "build:prod": "rm -rf dist && npm run prisma:generate && npm run build:server && npm run build:client",
     "deploy": "npm run build:prod",
     "prod": "npm run build:prod && npm start",
     "env:encrypt": "npx @dotenvx/dotenvx encrypt",
@@ -30,9 +30,12 @@
     "test": "vitest",
     "migrate": "tsx server/migrationRunner.ts",
     "seed": "tsx server/seed.ts",
+    "prisma:generate": "prisma generate",
+    "postinstall": "npm run prisma:generate",
     "prepare": "husky"
   },
   "dependencies": {
+    "@prisma/client": "^6.2.0",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
@@ -98,6 +101,7 @@
     "jsdom": "^27.1.0",
     "pino-pretty": "^13.1.2",
     "prettier": "^3.6.2",
+    "prisma": "^6.2.0",
     "rollup-plugin-visualizer": "^5.14.0",
     "tailwindcss": "^4.1.14",
     "tsx": "^4.20.6",
