feat: add ci:check script for GitHub Actions workflow
- Runs type-check, lint, and format:check in sequence
- Fixes missing script error in CI pipeline
- Ensures code quality checks before deployment

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,css,md,json}\"",
     "type-check": "tsc --noEmit",
     "test": "vitest",
+    "ci:check": "npm run type-check && npm run lint && npm run format:check",
     "migrate": "tsx server/migrationRunner.ts",
     "seed": "tsx server/seed.ts",
     "prisma:generate": "prisma generate",
