--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@prisma/client": "^6.2.0",
     "@hookform/resolvers": "^5.2.2",
+    "@prisma/client": "^6.2.0",
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/forms": "^0.5.10",
@@ -54,6 +54,7 @@
     "googleapis": "^164.1.0",
     "html2canvas": "^1.4.1",
     "i18next": "^25.6.0",
+    "imask": "^7.6.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
@@ -68,6 +69,7 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.0",
     "react-i18next": "^16.2.3",
+    "react-imask": "^7.6.1",
     "react-router-dom": "^7.9.3",
     "sharp": "^0.34.4",
     "use-debounce": "^10.0.6",
