--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/react": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.2.0",
     "@radix-ui/react-toast": "^1.2.15",
