feat(inventory): add allergy inventory management and provider integration
- Created `inventory_allergy_types` table to manage allergy types with hierarchical structure.
- Modified `inventory_items` table to include `allergy_type_id` and added foreign key constraint.
- Introduced `inventory_providers` and `provider_accounts` tables for managing providers and their accounts.
- Implemented `inventory_item_providers` table to link items with providers, including pricing and stock check details.
- Added `inventory_provider_checks` table for tracking inventory checks related to providers.
- Updated `mp_counterparts` table to include a new category 'OCCASIONAL'.

feat(services): implement services overview and management hooks

- Developed `useServicesOverview` hook for managing service data, including fetching, creating, and updating services.
- Created context provider for services to manage state and provide data to components.
- Implemented `ServicesHero`, `ServicesSurface`, and `ServicesStatCard` components for displaying service information.
- Added filtering and payment handling functionalities within the services management.

test(inventory): add unit tests for allergy inventory overview

- Implemented tests for `listAllergyInventoryOverview` to ensure proper grouping of providers and hierarchy building.
- Mocked database queries to validate the functionality without relying on actual database connections.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "seed": "tsx server/seed.ts",
     "prisma:generate": "prisma generate",
     "postinstall": "npm run prisma:generate",
+    "counterparts:backfill": "tsx scripts/backfill-counterparts.ts",
     "prepare": "husky"
   },
   "dependencies": {
