--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "predev:full": "node scripts/reset-dev.mjs",
     "dev:full": "concurrently \"npm:dev\" \"npm:server\"",
     "start": "node dist/server/index.js",
-    "build:prod": "rm -rf dist && npm run prisma:generate && npm run build:server && npm run build:client",
+    "build:prod": "rm -rf dist && npm run prisma:generate && npm run build:server && npm run copy:generated && npm run build:client",
+    "copy:generated": "mkdir -p dist/generated && cp -R generated/prisma dist/generated/prisma",
     "deploy": "npm run build:prod",
     "prod": "npm run build:prod && npm start",
     "env:encrypt": "npx @dotenvx/dotenvx encrypt",
