fix: update dev script for improved development workflow and enhance deploy script

--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "npm run dev:full",
+    "dev:client": "vite",
     "build": "tsc && vite build",
     "build:client": "vite build",
     "build:server": "tsc -p tsconfig.server.json",
     "preview": "vite preview",
     "server": "npx @dotenvx/dotenvx run -- tsx watch --tsconfig tsconfig.server.json server/index.ts",
     "predev:full": "node scripts/reset-dev.mjs",
-    "dev:full": "concurrently \"npm:dev\" \"npm:server\"",
+    "dev:full": "concurrently \"npm run dev:client\" \"npm run server\"",
     "start": "node dist/server/index.js",
     "build:prod": "rm -rf dist && npm run prisma:generate && npm run build:server && npm run copy:generated && npm run build:client",
     "copy:generated": "mkdir -p dist/generated && cp -R generated/prisma dist/generated/prisma",
-    "deploy": "npm run build:prod",
+    "deploy": "npm run build:prod && npm prune --omit=dev",
     "prod": "npm run build:prod && npm start",
     "env:encrypt": "npx @dotenvx/dotenvx encrypt",
     "env:decrypt": "npx @dotenvx/dotenvx decrypt",
